    "corresponding_column()" method. This method is used heavily by the ORM
    to "adapt" elements of an expression to similar, aliased expressions,
    as well as to target result set columns originally bound to a 
    table or selectable to an aliased, "corresponding" expression.  The new
    rewrite features completely consistent and accurate behavior.
    
- orm
  - eager loading with LIMIT/OFFSET applied no longer adds the primary 
    table joined to a limited subquery of itself; the eager loads now
    join directly to the subquery which also provides the primary table's
    columns to the result set.  This eliminates a JOIN from all eager loads
    with LIMIT/OFFSET.  [ticket:843]

  - Mapped classes may now define __eq__, __hash__, and __nonzero__ methods
    with arbitrary sementics.  The orm now handles all mapped instances on
    an identity-only basis. (e.g. 'is' vs '==') [ticket:676]

  - the "properties" accessor on Mapper is removed; it now throws an informative
    exception explaining the usage of mapper.get_property() and 
    mapper.iterate_properties
    
  - The behavior of query.options() is now fully based on paths, i.e. an
    option such as eagerload_all('x.y.z.y.x') will apply eagerloading to
    only those paths, i.e. and not 'x.y.x'; eagerload('children.children')
    applies only to exactly two-levels deep, etc. [ticket:777]

  - The session API has been solidified:

    - It's an error to session.save() an object which is already
      persistent [ticket:840]

    - It's an error to session.delete() an object which is *not*
      persistent.

    - session.update() and session.delete() raise an error when updating
      or deleting an instance that is already in the session with a
      different identity.

    - The session checks more carefully when determining "object X already
      in another session"; e.g. if you pickle a series of objects and
      unpickle (i.e. as in a Pylons HTTP session or similar), they can go